--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,11 @@
 # Starter pipeline
+- task: Security static source code analysis@2019
+  inputs:
+    CheckmarxService: 'Local_Cx'
+    projectName: 'Azure_Bookstore'
+    preset: 'Checkmarx Default'
+    fullTeamName: 'CxServer\SP\Company'
+    incScan: true
 # Start with a minimal pipeline that you can customize to build and deploy your code.
 # Add steps that build, run tests, deploy, and more:
 # https://aka.ms/yaml
